--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
     <head>
         <title>Hackify the Spotithon</title>
+        <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
     </head>
     <body>
         <h1>SUP</h1>
+        <div id="viewport"></div>
     </body>
 </html>
