--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>Hackify the Spotithon</title>
         <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.17/require.js"></script>
+        <script src="js/main.js"></script>
     </head>
     <body>
         <div id="viewport"></div>
