--- a/doing_the_audio.html
+++ b/doing_the_audio.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Hackify the Spotithon::AUDIO</title>
-        <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
+        <!-- <link rel="stylesheet" href="css/style.css" type="text/css" media="screen"> -->
         <script src="js/audio.js"></script>
     </head>
     <body>
