--- a/doing_the_audio.html
+++ b/doing_the_audio.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hackify the Spotithon::AUDIO</title>
-        <!-- <link rel="stylesheet" href="css/style.css" type="text/css" media="screen"> -->
+        <title>Hackify the Spotithon</title>
+        <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
         <script src="js/audio.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.17/require.js"></script>
+        <script src="js/main.js"></script>
     </head>
     <body>
         <div id="viewport"></div>
