--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Hackify the Spotithon</title>
         <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
+        <script src="js/audio.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.17/require.js"></script>
         <script src="js/main.js"></script>
     </head>
